--- a/html/components/BrandAsset.html
+++ b/html/components/BrandAsset.html
@@ -10,10 +10,12 @@
     <meta property="og:description" content="">
     <meta property="og:image" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="../../css/reset.css">
+    <link rel="stylesheet" href="../../css/component.css">
     <title>Title</title>
 </head>
 <body>
-    <div id="wrap">
+    <div id="wrap" class="prototype">
         <header id="header">
             <h1 class="title-h1">
                 Brand Asset
@@ -21,7 +23,30 @@
         </header>
         <main class="main">
             <div class="container">
-                <div class="inner"></div>
+                <div class="inner">
+                    <div class="prototype-intro-info">
+                        <strong class="text text-t3">- 정의</strong>
+                        <ol class="caption-area">
+                            <li class="list-item">
+                                <span class="text"></span>
+                            </li>
+                            <li class="list-item">
+                                <span class="text"></span>
+                            </li>
+                            <li class="list-item">
+                                <span class="text"></span>
+                            </li>
+                            <li class="list-item">
+                                <span class="text"></span>
+                            </li>
+                            <li class="list-item">
+                                <span class="text"></span>
+                            </li>
+                        </ol>
+
+                        <div class="preview-info"></div>
+                    </div>
+                </div>
             </div>
         </main>
         <div id="footer"></div>
