--- a/css/prototype.css
+++ b/css/prototype.css
@@ -7,6 +7,7 @@
     --primary-85: #262626;
     --primary-80: #333333;
     --primary-75: #404040;
+    --primary-70: #4D4D4D;
     --primary-65: #595959;
     --primary-60: #666666;
     --primary-55: #737373;
@@ -40,18 +41,18 @@
 .bold {font-weight: 700 !important;}
 .italic {font-style: italic !important;}
 
-.font-size-70 {font-size: 70px; line-height: 100%;}
-.font-size-60 {font-size: 60px; line-height: 100%;}
-.font-size-50 {font-size: 50px; line-height: 100%;}
-.font-size-40 {font-size: 40px; line-height: 110%;}
-.font-size-32 {font-size: 32px; line-height: 110%;}
-.font-size-28 {font-size: 28px; line-height: 110%;}
-.font-size-22 {font-size: 22px; line-height: 110%;}
-.font-size-20 {font-size: 20px; line-height: 110%;}
-.font-size-18 {font-size: 18px; line-height: 110%;}
-.font-size-16 {font-size: 18px; line-height: 140%;}
-.font-size-14 {font-size: 14px; line-height: 140%;}
-.font-size-12 {font-size: 12px; line-height: 140%;}
+.text-h1 {font-size: 70px; line-height: 100%;}
+.text-h2 {font-size: 60px; line-height: 100%;}
+.text-h3 {font-size: 50px; line-height: 100%;}
+.text-t1 {font-size: 40px; line-height: 110%;}
+.text-t2 {font-size: 34px; line-height: 110%;}
+.text-t3 {font-size: 28px; line-height: 110%;}
+.text-t4 {font-size: 22px; line-height: 110%;}
+.text-t5 {font-size: 20px; line-height: 110%;}
+.text-b1 {font-size: 18px; line-height: 140%;}
+.text-b2 {font-size: 16px; line-height: 140%;}
+.text-b3 {font-size: 14px; line-height: 140%;}
+.text-c1 {font-size: 12px; line-height: 140%;}
 
 
 .color-primary-80 {color: var(--primary-80);}
@@ -65,14 +66,51 @@
 .title-h2 {font-size: 44px; line-height: 100%; font-weight: bold;}
 .title-h3 {font-size: 40px; line-height: 100%; font-weight: bold;}
 
-.title-01 {font-size: 32px; line-height: 110%}
-.title-02 {font-size: 26px; line-height: 110%}
-.title-03 {font-size: 20px; line-height: 110%}
-.title-04 {font-size: 18px; line-height: 110%}
 
-
+.prototype .title-h1 {padding: 30px 0 50px;}
 .prototype-intro-info .caption-area .list-item .text {display: inline-block; font-size: 16px; line-height: 140%; color: var(--primary-80);}
 .prototype-intro-info .caption-area .list-item .text::before {content:"-"; display: inline-flex; margin-right: 5px;}
 
-.code-preview table {width: 1100px;}
-.code-preview table tr td:last-child {display: none;}
+.prototype .code-preview {display: flex; flex-direction: column; gap:5px 0;}
+.prototype .code-preview .code {width: fit-content; margin-top: 24px; background: var(--grayscale-80);}
+.prototype .code-preview table {width: 1200px;}
+.prototype .code-preview table tr td:last-child {display: none;}
+
+.prototype .prototype-intro-info > strong {display: block; margin:20px 0 30px;}
+.prototype .preview-info {max-width: 1200px; margin-top: 30px;}
+.prototype .preview-info ul {display: flex; flex-wrap: wrap; padding: 20px 0;}
+
+
+/* Typography */
+.prototype .preview-info ul.typo-preview-area {justify-content: center; align-items: center; gap: 10px;}
+.prototype .preview-info ul.typo-preview-area li {flex: 1 0 calc(33.33% - 10px);}
+.prototype .preview-info ul.typo-preview-area li .box {display: flex; width: 100%; height: 100px; background-color: var(--grayscale-80); justify-content: center; align-items: center;}
+.prototype .preview-info ul.typo-preview-area li .caption {color: var(--primary-60);}
+.prototype .preview-info ol.typo-ol-area li {display: flex; align-items: flex-end;}
+.prototype .preview-info ol.typo-ol-area li + li {margin-top: 10px;}
+.prototype .preview-info ol.typo-ol-area li strong {min-width: 300px;}
+
+
+/* Color */
+.prototype .color-box-area {display: flex; gap: 20px 0;}
+.prototype .color-box-area li .color-box {width:90px; height: 90px;}
+.prototype .color-box-area.black li:nth-child(1) .color-box {background-color: var(--primary-90);}
+.prototype .color-box-area.black li:nth-child(2) .color-box {background-color: var(--primary-85);}
+.prototype .color-box-area.black li:nth-child(3) .color-box {background-color: var(--primary-80);}
+.prototype .color-box-area.black li:nth-child(4) .color-box {background-color: var(--primary-75);}
+.prototype .color-box-area.black li:nth-child(5) .color-box {background-color: var(--primary-70);}
+.prototype .color-box-area.black li:nth-child(6) .color-box {background-color: var(--primary-65);}
+.prototype .color-box-area.black li:nth-child(7) .color-box {background-color: var(--primary-60);}
+.prototype .color-box-area.black li:nth-child(8) .color-box {background-color: var(--primary-55);}
+.prototype .color-box-area.black li:nth-child(9) .color-box {background-color: var(--primary-50);}
+.prototype .color-box-area.black li:nth-child(10) .color-box {background-color: var(--primary-45);}
+.prototype .color-box-area.black li:nth-child(11) .color-box {background-color: var(--primary-40);}
+.prototype .color-box-area.black li:nth-child(12) .color-box {background-color: var(--primary-35);}
+.prototype .color-box-area.black li:nth-child(13) .color-box {background-color: var(--primary-30);}
+.prototype .color-box-area.black li:nth-child(14) .color-box {background-color: var(--primary-25);}
+.prototype .color-box-area.black li:nth-child(15) .color-box {background-color: var(--primary-20);}
+.prototype .color-box-area.black li:nth-child(16) .color-box {background-color: var(--primary-15);}
+.prototype .color-box-area.black li:nth-child(17) .color-box {background-color: var(--primary-10);}
+.prototype .color-box-area.black li:nth-child(18) .color-box {background-color: var(--primary-5);}
+
+.prototype .color-box-area.gray li:nth-child(1) .color-box {background-color: var(--grayscale);}
