--- a/html/components/Color.html
+++ b/html/components/Color.html
@@ -45,7 +45,7 @@
                         </ol>
 
                         <div class="preview-info">
-                            <strong class="text-b2">black</strong>
+                            <strong class="text-b2">Black</strong>
                             <ul class="color-box-area black">
                                 <li>
                                     <div class="color-box"></div>
@@ -147,6 +147,51 @@
                                     <div class="color-box"></div>
                                     <div class="color-name text-b3">Gray</div>
                                     <div class="color-code text-c1">#E9EBF0</div>
+                                </li>
+                                <li>
+                                    <div class="color-box"></div>
+                                    <div class="color-name text-b3">Gray-90</div>
+                                    <div class="color-code text-c1">#EBEDF2</div>
+                                </li>
+                                <li>
+                                    <div class="color-box"></div>
+                                    <div class="color-name text-b3">Gray-80</div>
+                                    <div class="color-code text-c1">#EDEFF3</div>
+                                </li>
+                                <li>
+                                    <div class="color-box"></div>
+                                    <div class="color-name text-b3">Gray-70</div>
+                                    <div class="color-code text-c1">#F0F1F5</div>
+                                </li>
+                                <li>
+                                    <div class="color-box"></div>
+                                    <div class="color-name text-b3">Gray-60</div>
+                                    <div class="color-code text-c1">#F2F3F6</div>
+                                </li>
+                                <li>
+                                    <div class="color-box"></div>
+                                    <div class="color-name text-b3">Gray-50</div>
+                                    <div class="color-code text-c1">#F4F5F7</div>
+                                </li>
+                                <li>
+                                    <div class="color-box"></div>
+                                    <div class="color-name text-b3">Gray-40</div>
+                                    <div class="color-code text-c1">#F6F7F9</div>
+                                </li>
+                                <li>
+                                    <div class="color-box"></div>
+                                    <div class="color-name text-b3">Gray-30</div>
+                                    <div class="color-code text-c1">#F8F9FB</div>
+                                </li>
+                                <li>
+                                    <div class="color-box"></div>
+                                    <div class="color-name text-b3">Gray-20</div>
+                                    <div class="color-code text-c1">#FBFBFC</div>
+                                </li>
+                                <li>
+                                    <div class="color-box"></div>
+                                    <div class="color-name text-b3">Gray-10</div>
+                                    <div class="color-code text-c1">#FDFDFD</div>
                                 </li>
                             </ul>
                         </div>
