--- a/html/components/Typography.html
+++ b/html/components/Typography.html
@@ -34,6 +34,12 @@
                     <strong class="text text-t3">폰트 정의</strong>
                     <ol class="caption-area">
                         <li class="list-item">
+                            <span class="text">국문 : "Noto Sans KR"</span>
+                        </li>
+                        <li class="list-item">
+                            <span class="text">영문 : "Jam Grotesque"</span>
+                        </li>
+                        <li class="list-item">
                             <span class="text">기본 폰트 사이즈는 10px으로 설정되어 있다. 보통의 경우 font-family 속성을 쓰지 않는다.</span>
                         </li>
                         <li class="list-item">
