--- a/css/prototype.css
+++ b/css/prototype.css
@@ -3,7 +3,7 @@
 
 :root {
     --primary   : #000000;
-    --primary-90: #1a1a1a;
+    --primary-90: #1A1A1A;
     --primary-85: #262626;
     --primary-80: #333333;
     --primary-75: #404040;
@@ -23,7 +23,7 @@
     --primary-5 : #F2F2F2;
 
 
-    --grayscale   : #e9ebf0;
+    --grayscale   : #E9EBF0;
     --grayscale-90: #EBEDF2;
     --grayscale-80: #EDEFF3;
     --grayscale-70: #F0F1F5;
@@ -67,7 +67,7 @@
 .title-h3 {font-size: 40px; line-height: 100%; font-weight: bold;}
 
 
-.prototype .title-h1 {padding: 30px 0 50px;}
+.prototype header .title-h1 {padding: 30px 0 50px;}
 .prototype-intro-info .caption-area .list-item .text {display: inline-block; font-size: 16px; line-height: 140%; color: var(--primary-80);}
 .prototype-intro-info .caption-area .list-item .text::before {content:"-"; display: inline-flex; margin-right: 5px;}
 
@@ -86,9 +86,10 @@
 .prototype .preview-info ul.typo-preview-area li {flex: 1 0 calc(33.33% - 10px);}
 .prototype .preview-info ul.typo-preview-area li .box {display: flex; width: 100%; height: 100px; background-color: var(--grayscale-80); justify-content: center; align-items: center;}
 .prototype .preview-info ul.typo-preview-area li .caption {color: var(--primary-60);}
-.prototype .preview-info ol.typo-ol-area li {display: flex; align-items: flex-end;}
+.prototype .preview-info ol.typo-ol-area li {display: flex; align-items: flex-start;}
 .prototype .preview-info ol.typo-ol-area li + li {margin-top: 10px;}
-.prototype .preview-info ol.typo-ol-area li strong {min-width: 300px;}
+.prototype .preview-info ol.typo-ol-area li strong {min-width: 300px; padding: 10px; margin-right: 10px; border-top:1px solid var(--primary-65);}
+.prototype .preview-info ol.typo-ol-area li p {padding: 10px; border-top: 1px solid var(--primary-65);}
 
 
 /* Color */
@@ -114,3 +115,12 @@
 .prototype .color-box-area.black li:nth-child(18) .color-box {background-color: var(--primary-5);}
 
 .prototype .color-box-area.gray li:nth-child(1) .color-box {background-color: var(--grayscale);}
+.prototype .color-box-area.gray li:nth-child(2) .color-box {background-color: var(--grayscale-90);}
+.prototype .color-box-area.gray li:nth-child(3) .color-box {background-color: var(--grayscale-80);}
+.prototype .color-box-area.gray li:nth-child(4) .color-box {background-color: var(--grayscale-70);}
+.prototype .color-box-area.gray li:nth-child(5) .color-box {background-color: var(--grayscale-60);}
+.prototype .color-box-area.gray li:nth-child(6) .color-box {background-color: var(--grayscale-50);}
+.prototype .color-box-area.gray li:nth-child(7) .color-box {background-color: var(--grayscale-40);}
+.prototype .color-box-area.gray li:nth-child(8) .color-box {background-color: var(--grayscale-30);}
+.prototype .color-box-area.gray li:nth-child(9) .color-box {background-color: var(--grayscale-20);}
+.prototype .color-box-area.gray li:nth-child(10) .color-box {background-color: var(--grayscale-10);}
